FIX connectivity failover. Initial perf test w/o replication